# felini-firmware

./: .gitignore  .gitmodules  Build Status.txt  CMakeLists.txt  Config Project.md  Debug.md  Hardware.md  README.md  Repo.md  felini_vscode.code-profile  partitions.csv  sdkconfig  sdkconfig.old
components/daplink/: CMakeLists.txt  dap_main.c  dap_main.h  dap_process.c
components/daplink/daplink/port/: port_common.h
components/logic_analyzer/: .gitignore  CMakeLists.txt  Kconfig.projbuild  README-RU.md  README.md
components/logic_analyzer/logic_analyzer_cdc/: logic_analyzer_cdc.c  logic_analyzer_cdc.h
components/logic_analyzer/logic_analyzer_hal/: fake_hi_interrupt_s.c  logic_analyzer_hal.c
components/logic_analyzer/logic_analyzer_hal/esp32s3/: logic_analyzer_hi_interrupt_handler.s  logic_analyzer_ll.c  logic_analyzer_triggered_isr_start.c
components/logic_analyzer/logic_analyzer_hal/include/: logic_analyzer_hal.h
components/logic_analyzer/logic_analyzer_hal/private_include/: logic_analyzer_hi_level_interrupt.h  logic_analyzer_ll.h  logic_analyzer_pin_definition.h
components/logic_analyzer/logic_analyzer_sump/: logic_analyzer_sump.c
components/logic_analyzer/logic_analyzer_sump/include/: logic_analyzer_sump.h
components/logic_analyzer/logic_analyzer_sump/private_include/: logic_analyzer_sump_definition.h
components/usb_cherry/: CMakeLists.txt  usb_jtag_serial_esp32s3.c  usb_jtag_serial_esp32s3.h
components/usb_cherry/CherryUSB/: .cproject  .gitignore  .project  CherryUSB - Shortcut.lnk
components/usb_cherry/CherryUSB/core/: usbd_core.c
components/usb_cherry/addition/: usb_cherry_platform.c
main/: CMakeLists.txt  dap_main.c  dap_main.h  main.cpp  usb_config.h
main/App/: App.cpp  App.h  Launcher.h
main/App/Common/DataProc/: DP_Clock.cpp  DP_DAPLink.cpp  DP_IIC.cpp  DP_INA226.cpp  DP_IntervalTime.cpp  DP_LEDSTRIP.cpp  DP_LIST.inc  DP_LogicAnalyzer.cpp  DP_Power.cpp  DP_PowerPD.cpp  DP_PowerPMIC.cpp  DP_RCServo.cpp  DP_UART.cpp  DP_Weather.cpp  DP_WiFi.cpp  DataProc.cpp  DataProc.h  DataProc_Def.h
main/App/Common/HAL/: HAL.h  HAL_Def.h
main/App/Config/: Config.h
main/App/Pages/: AppFactory.cpp  Page.h
main/App/Pages/AnalogViewer/: AnalogViewer.cpp  AnalogViewer.h  AnalogViewerModel.cpp  AnalogViewerModel.h  AnalogViewerView.cpp  AnalogViewerView.h
main/App/Pages/AppInfos/: AppInfos.cpp  AppInfos.h  AppInfosModel.cpp  AppInfosModel.h  AppInfosView.cpp  AppInfosView.h  change_name_img.py
main/App/Pages/AppList/: AppList.cpp  AppList.h  AppListModel.cpp  AppListModel.h  AppListView.cpp  AppListView.h  change_name_img.py
main/App/Pages/AppLumia/: AppLumia.cpp  AppLumia.h  AppLumiaModel.cpp  AppLumiaModel.h  AppLumiaView.cpp  AppLumiaView.h  change_name_img.py
main/App/Pages/CandleLight/: CandleLight.cpp  CandleLight.h  CandleLightModel.cpp  CandleLightModel.h  CandleLightView.cpp  CandleLightView.h
main/App/Pages/ColorWheel/: ColorWheel.cpp  ColorWheel.h  ColorWheelModel.cpp  ColorWheelModel.h  ColorWheelView.cpp  ColorWheelView.h  change_name_img.py
main/App/Pages/DAPLink/: DAPLink.cpp  DAPLink.h  DAPLinkModel.cpp  DAPLinkModel.h  DAPLinkView.cpp  DAPLinkView.h
main/App/Pages/Dialplate/: Dialplate.cpp  Dialplate.h  DialplateModel.cpp  DialplateModel.h  DialplateView.cpp  DialplateView.h
main/App/Pages/HappyBirthday/: HappyBirthday.cpp  HappyBirthday.h  HappyBirthdayModel.cpp  HappyBirthdayModel.h  HappyBirthdayView.cpp  HappyBirthdayView.h  change_name_img.py
main/App/Pages/Hertz/: Hertz.cpp  Hertz.h  HertzModel.cpp  HertzModel.h  HertzView.cpp  HertzView.h  change_name_img.py
main/App/Pages/IICDiscovery/: IICDiscovery.cpp  IICDiscovery.h  IICDiscoveryModel.cpp  IICDiscoveryModel.h  IICDiscoveryView.cpp  IICDiscoveryView.h  change_name_img.py
main/App/Pages/IMUSensor/: IMUSensor.cpp  IMUSensor.h  IMUSensorModel.cpp  IMUSensorModel.h  IMUSensorView.cpp  IMUSensorView.h
main/App/Pages/Interval/: Interval.cpp  Interval.h  IntervalModel.cpp  IntervalModel.h  IntervalView.cpp  IntervalView.h  change_name_img.py
main/App/Pages/KaitoKey/: KaitoKey.cpp  KaitoKey.h  KaitoKeyModel.cpp  KaitoKeyModel.h  KaitoKeyView.cpp  KaitoKeyView.h  change_name_img.py
main/App/Pages/LogicAnalyzer/: LogicAnalyzer.cpp  LogicAnalyzer.h  LogicAnalyzerModel.cpp  LogicAnalyzerModel.h  LogicAnalyzerView.cpp  LogicAnalyzerView.h  change_name_img.py
main/App/Pages/MenuList/: MenuList.cpp  MenuList.h  MenuListModel.cpp  MenuListModel.h  MenuListView.cpp  MenuListView.h  change_name_img.py
main/App/Pages/PowerList/: PowerList.cpp  PowerList.h  PowerListModel.cpp  PowerListModel.h  PowerListView.cpp  PowerListView.h
main/App/Pages/PowerSupply/: PowerSupply.cpp  PowerSupply.h  PowerSupplyModel.cpp  PowerSupplyModel.h  PowerSupplyView.cpp  PowerSupplyView.h  change_name_img.py
main/App/Pages/ServoCtrl/: ServoCtrl.cpp  ServoCtrl.h  ServoCtrlModel.cpp  ServoCtrlModel.h  ServoCtrlView.cpp  ServoCtrlView.h  change_name_img.py
main/App/Pages/StartUp/: StartUp.cpp  StartUpModel.cpp  StartUpModel.h  StartUpView.cpp
main/App/Pages/StatusBar/: StatusBar.cpp
main/App/Pages/UARTViewer/: UARTViewer.cpp  UARTViewer.h  UARTViewerModel.cpp  UARTViewerModel.h  UARTViewerView.cpp  UARTViewerView.h
main/App/Pages/_Template/: Template.cpp  TemplateModel.h  TemplateView.cpp
main/App/Resource/: README.md  ResourcePool.cpp  ResourcePool.h
main/App/Resource/Image/: img_src_alarm.c  (+100 more)
main/HAL/: CommonMacro.h  HAL.cpp  HAL_Buzz.cpp  HAL_DapLink.cpp  HAL_IIC.cpp  HAL_INA226.cpp  HAL_IntervalTime.cpp  HAL_LEDSTRIP.cpp  HAL_LogicAnalyzer.cpp  HAL_Power.cpp  HAL_PowerMeasure.cpp  HAL_PowerPD.cpp  HAL_PowerPMIC.cpp  HAL_PowerSupply.cpp  HAL_RCServo.cpp  HAL_UART.cpp  HAL_Weather.cpp  HAL_WiFi.cpp
main/HAL/HAL_SIM/: HAL.cpp  HAL.h  HAL_Clock.cpp  HAL_DapLink.cpp  HAL_IIC.cpp  HAL_INA226.cpp  HAL_IntervalTime.cpp  HAL_LEDSTRIP.cpp  HAL_LogicAnalyzer.cpp  HAL_PowerPD.cpp  HAL_PowerPMIC.cpp  HAL_RCServo.cpp  HAL_UART.cpp
main/daplink/port/: gpio.h  port_common.h  port_core.c
main/porting/: lv_porting.c  lv_porting.h
main/usb_cherry/addition/: usb_cherry_platform.c
(+195 files in other folders)
